--- a/Python_Quickstart.ipynb
+++ b/Python_Quickstart.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": "Python_Quickstart"
+  "name": "",
+  "signature": "sha256:66fc718f9a22544323e531d85518ece4d921531e97aad9fdf67edc6383d7c889"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,9 +10,18 @@
    "cells": [
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
-      "# Here are a few useful things to know about Python\n",
+      " # Here are a few useful things to know about Python\n",
       "\n",
       "All touched on in Class 1"
      ]
@@ -24,9 +34,17 @@
       "x = 0"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -41,17 +59,17 @@
       "    print 'negative'"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "zero\n"
-       ]
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
       }
-     ],
-     "prompt_number": 2
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -63,17 +81,17 @@
       "my_func(2)"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 4,
-       "text": [
-        "4"
-       ]
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
       }
-     ],
-     "prompt_number": 4
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -84,17 +102,17 @@
       "    print my_func(x),"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0 1 4 9 16 25 36 49 64 81\n"
-       ]
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
       }
-     ],
-     "prompt_number": 5
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -102,12 +120,18 @@
      "input": [
       "# DataFrames and reading csvs\n",
       "import pandas as pd\n",
-      "df = pd.read_csv('/home/j/Project/Machine-Learning/ML4HM/weather-numeric.csv')"
+      "df = pd.read_csv('data/weather-numeric.csv')"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "metadata": {
+      "internals": {
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -116,17 +140,15 @@
       "df.index"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 7,
-       "text": [
-        "Int64Index([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], dtype=int64)"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_number": 6
+      },
+      "slideshow": {
+       "slide_type": "fragment"
       }
-     ],
-     "prompt_number": 7
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -135,17 +157,18 @@
       "df.columns"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 8,
-       "text": [
-        "Index([outlook, temperature, humidity, windy, play], dtype=object)"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 7,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "fragment"
       }
-     ],
-     "prompt_number": 8
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -154,31 +177,19 @@
       "print df"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "     outlook  temperature  humidity  windy play\n",
-        "0      sunny           85        85  False   no\n",
-        "1      sunny           80        90   True   no\n",
-        "2   overcast           83        86  False  yes\n",
-        "3      rainy           70        96  False  yes\n",
-        "4      rainy           68        80  False  yes\n",
-        "5      rainy           65        70   True   no\n",
-        "6   overcast           64        65   True  yes\n",
-        "7      sunny           72        95  False   no\n",
-        "8      sunny           69        70  False  yes\n",
-        "9      rainy           75        80  False  yes\n",
-        "10     sunny           75        70   True  yes\n",
-        "11  overcast           72        90   True  yes\n",
-        "12  overcast           81        75  False  yes\n",
-        "13     rainy           71        91   True   no\n"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 7,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
       }
-     ],
-     "prompt_number": 9
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -187,95 +198,96 @@
       "df.humidity"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 10,
-       "text": [
-        "0     85\n",
-        "1     90\n",
-        "2     86\n",
-        "3     96\n",
-        "4     80\n",
-        "5     70\n",
-        "6     65\n",
-        "7     95\n",
-        "8     70\n",
-        "9     80\n",
-        "10    70\n",
-        "11    90\n",
-        "12    75\n",
-        "13    91\n",
-        "Name: humidity, dtype: int64"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 7,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
       }
-     ],
-     "prompt_number": 10
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "df.xs(12)"
+      "df.loc[12]"
      ],
      "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 11,
-       "text": [
-        "outlook        overcast\n",
-        "temperature          81\n",
-        "humidity             75\n",
-        "windy             False\n",
-        "play                yes\n",
-        "Name: 12, dtype: object"
-       ]
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 7,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
       }
-     ],
-     "prompt_number": 11
+     },
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from ipynb_style import clean\n",
-      "clean()"
+      "from ipynb_style import presentation\n",
+      "presentation()"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 7
+      },
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
      "outputs": [
       {
        "html": [
         "\n",
         "<style type=\"text/css\">\n",
         "div.input {\n",
-        "width: 105ex; /* about 80 chars + buffer */\n",
+        "width: 1024px; /* about 80 chars + buffer */\n",
         "}\n",
         "\n",
         "div.text_cell {\n",
-        "width: 105ex /* instead of 100%, */\n",
+        "width: 1024px /* instead of 100%, */\n",
         "}\n",
         "\n",
         "div.text_cell_render {\n",
         "/*font-family: \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;*/\n",
         "font-family: \"Charis SIL\", serif; /* Make non-code text serif. */\n",
         "line-height: 145%; /* added for some line spacing of text. */\n",
-        "width: 105ex; /* instead of 'inherit' for shorter lines */\n",
+        "font-size: 28pt;\n",
         "}\n",
         "\n",
         "/* Set the size of the headers */\n",
         "div.text_cell_render h1 {\n",
-        "font-size: 18pt;\n",
+        "font-size: 36pt;\n",
         "}\n",
         "\n",
         "div.text_cell_render h2 {\n",
+        "font-size: 32pt;\n",
+        "}\n",
+        "\n",
+        "div.text_cell_render li {\n",
+        "line-height: 1.2em;\n",
+        "}\n",
+        "\n",
+        "div.text_cell_render p {\n",
         "font-size: 14pt;\n",
+        "line-height: 1em;\n",
         "}\n",
         "\n",
         ".CodeMirror {\n",
+        "font-size: 14pt;\n",
         " font-family: Consolas, monospace;\n",
         " }\n",
         "\n",
@@ -283,21 +295,32 @@
         "\n",
         "</style>\n"
        ],
+       "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 28,
        "text": [
-        "<IPython.core.display.HTML at 0x2cc6310>"
+        "<IPython.core.display.HTML object>"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 7,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "skip"
+      }
+     },
      "outputs": []
     }
    ],
