--- a/exercises/ML4HM_Exercise_1.ipynb
+++ b/exercises/ML4HM_Exercise_1.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": "ML4HM_Exercise_1"
+  "name": "",
+  "signature": "sha256:88c90a69da1e677156d5e9786ac66d2673526c83fd1cc6a42c0d1acdbc7548de"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,7 +10,14 @@
    "cells": [
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "internals": {
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "# Exercise 1: Predicting Weather"
      ]
@@ -19,12 +27,17 @@
      "collapsed": false,
      "input": [
       "import pandas as pd\n",
-      "df = pd.read_csv('/home/j/Project/Machine-Learning/ML4HM/weather-numeric.csv')"
+      "df = pd.read_csv('../data/weather-numeric.csv')"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {},
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": [],
-     "prompt_number": 43
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -33,7 +46,12 @@
       "df.head()"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {},
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": [
       {
        "html": [
@@ -94,8 +112,9 @@
         "</table>\n",
         "</div>"
        ],
+       "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 44,
+       "prompt_number": 3,
        "text": [
         "    outlook  temperature  humidity  windy play\n",
         "0     sunny           85        85  False   no\n",
@@ -106,7 +125,7 @@
        ]
       }
      ],
-     "prompt_number": 44
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -115,13 +134,23 @@
       "# use TAB to explore commands"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {},
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "internals": {},
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "source": [
       "## Abie's dumb predictor"
      ]
@@ -137,32 +166,48 @@
       "        return 'yes'"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {},
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "predict(df.xs(1)) # xs means \"cross-section\" aka row"
+      "predict(df.loc[1]) # .loc[1] means \"location = row 1\""
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {},
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 6,
        "text": [
         "'no'"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "internals": {},
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "source": [
       "## How good is this dumb predictor?"
      ]
@@ -172,20 +217,26 @@
      "collapsed": false,
      "input": [
       "i = 0\n",
-      "predict(df.xs(i)) == df.play[i]"
+      "predict(df.loc[i]) == df.play[i]"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {},
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 8,
        "text": [
         "True"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -196,24 +247,104 @@
       "    pass"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "internals": {},
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "internals": {},
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
      "source": [
       "## How much better can you do with a single rule?"
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "# Homework:\n",
+      "\n",
+      "* Find the best \"length-two decision list\" for `weather`\n",
+      "\n",
+      "* Think about machine learning projects you might do for this course (related to your IHME research?), and about elevator pitches\n",
+      "\n",
+      "* *Read*\n",
+      "\n"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "from ipynb_style import clean\n",
+      "clean()"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "\n",
+        "<style type=\"text/css\">\n",
+        "div.input {\n",
+        "width: 105ex; /* about 80 chars + buffer */\n",
+        "}\n",
+        "\n",
+        "div.text_cell {\n",
+        "width: 105ex /* instead of 100%, */\n",
+        "}\n",
+        "\n",
+        "div.text_cell_render {\n",
+        "/*font-family: \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;*/\n",
+        "font-family: \"Charis SIL\", serif; /* Make non-code text serif. */\n",
+        "line-height: 145%; /* added for some line spacing of text. */\n",
+        "width: 105ex; /* instead of 'inherit' for shorter lines */\n",
+        "}\n",
+        "\n",
+        "/* Set the size of the headers */\n",
+        "div.text_cell_render h1 {\n",
+        "font-size: 18pt;\n",
+        "}\n",
+        "\n",
+        "div.text_cell_render h2 {\n",
+        "font-size: 14pt;\n",
+        "}\n",
+        "\n",
+        ".CodeMirror {\n",
+        " font-family: Consolas, monospace;\n",
+        " }\n",
+        "\n",
+        ".rendered_html ol {list-style:decimal; margin: 1em 2em;}\n",
+        "\n",
+        "</style>\n"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "<IPython.core.display.HTML object>"
+       ]
+      }
+     ],
+     "prompt_number": 10
     }
    ],
    "metadata": {}
