--- a/homework/ML4HM_Homework_1-Solns.ipynb
+++ b/homework/ML4HM_Homework_1-Solns.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": "ML4HM_Homework_1-Solns"
+  "name": "",
+  "signature": "sha256:b172f54c54bc260c403dcf97436ce76c59a9e1e3a6f69d1c8811afcf33a51f41"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -73,6 +74,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 3,
        "text": [
@@ -117,6 +119,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
@@ -136,6 +139,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 8,
        "text": [
@@ -262,14 +266,15 @@
         "\n",
         "</style>\n"
        ],
+       "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 1,
        "text": [
-        "<IPython.core.display.HTML at 0x3743250>"
+        "<IPython.core.display.HTML object>"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
