--- a/lectures/Lecture_1.ipynb
+++ b/lectures/Lecture_1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:d21f4d5fb70d6659091ca5d1eb704aac9c2706013113879dd25430fcd9368c41"
+  "signature": "sha256:99813e0de31eaa6ebc5b254286190bfd825e71f6695ca1c7dc8b6037209c01b5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,10 +13,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
-       "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
-      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "slide"
       }
@@ -29,6 +27,24 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_number": 1,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "<img  src=\"MAB3WJKXSTOH48YXGWUOBV0SY6B04CCK.png\"/>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -41,8 +57,7 @@
       "# Lecture 1 Outline:\n",
       "    \n",
       "* Administrivia\n",
-      "* What is artificial intelligence?\n",
-      "* What is machine learning?\n",
+      "* What is artificial intelligence, what is machine learning?\n",
       "* Exercise 1: Predicting XXX"
      ]
     },
@@ -50,6 +65,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -66,10 +83,12 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
-      "slide_helper": "subslide_end",
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "subslide"
       }
@@ -86,6 +105,172 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# *Read*\n",
+      "\n",
+      "\u2022\tWitten, Frank, and Hall, Data Mining: Practical Machine Learning Tools and Techniques.\n",
+      "\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "<img  src=\"LKXLQ8L1HD6JE0TTNIRXND4QXAQ1TERL.png\"/>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# *Read*\n",
+      "\n",
+      "\u2022\tJames, Witten, Hastie, and Tibshirani, An Introduction to Statistical Learning with applications in R.\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "<img  src=\"G2G7MK2IRDRIDU6QLWV2001PR7WICDD1.png\"/>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_type": "subslide"
+      },
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# *Read*\n",
+      "\n",
+      "\u2022\tMcKinney, Python for Data Analysis.\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_helper": "subslide_end"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "-"
+      }
+     },
+     "source": [
+      "<img  src=\"LXKCVBJ3EOB8VL5YFSQ1X52V33AQMB64.png\"/>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "slide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# Participate in Class"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
+     "source": [
+      "Think of this class like a journal club.  I am here, I'll facilitate it, but I want you to *read* (see previous expectation), and discuss what you are reading with each other.  In the age of the MOOC, it is the classroom community that justifies old fashioned courses."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_helper": "subslide_end",
+       "slide_type": "subslide"
+      },
+      "slide_helper": "subslide_end",
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# Do a project"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
+     "source": [
+      "This is the part that I am really excited about..."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -100,6 +285,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
@@ -114,7 +301,22 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "\n",
+      "* Monday and Wednesday 10:30-11:50AM in the Health Sciences Library Teaching Lab (LTL First Room)\n",
+      "* except for Feb 4th, 9th, and 23rd, which will meet in eScience Institute WRF Data Science Studio in the Physics/Astronomy Tower (PAT), 6th Floor, room 610C)\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -130,6 +332,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -145,6 +349,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -162,6 +368,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -175,7 +383,10 @@
     {
      "cell_type": "markdown",
      "metadata": {
-      "internals": {},
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1
+      },
       "slideshow": {
        "slide_type": "skip"
       }
@@ -195,6 +406,8 @@
      "language": "python",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -209,6 +422,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -228,6 +443,8 @@
      "language": "python",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -257,6 +474,8 @@
      "language": "python",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -292,6 +511,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -313,6 +534,8 @@
      "language": "python",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -337,6 +560,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -346,13 +571,27 @@
       }
      },
      "source": [
-      "## What will we do in this class?"
+      "## What will we do in this class?\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "fragment"
+      }
+     },
+     "source": [
+      "\n",
+      "### https://github.com/aflaxman/ai4hm"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -381,6 +620,8 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -388,7 +629,9 @@
       }
      },
      "source": [
-      "## Exercise 1: Predicting Weather\n"
+      "## Exercise 1: Predicting Weather\n",
+      "\n",
+      "### https://cloud.sagemath.com"
      ]
     },
     {
@@ -396,17 +639,20 @@
      "collapsed": false,
      "input": [
       "import pandas as pd\n",
-      "df = pd.read_csv('../data/weather-numeric.csv')"
+      "df = pd.read_csv('https://github.com/aflaxman/AI4HM/raw/master/data/weather-numeric.csv')"
      ],
      "language": "python",
      "metadata": {
-      "internals": {},
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1
+      },
       "slideshow": {
        "slide_type": "-"
       }
      },
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -417,6 +663,8 @@
      "language": "python",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -486,7 +734,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 13,
        "text": [
         "    outlook  temperature  humidity  windy play\n",
         "0     sunny           85        85  False   no\n",
@@ -497,12 +745,14 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -525,13 +775,16 @@
      ],
      "language": "python",
      "metadata": {
-      "internals": {},
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1
+      },
       "slideshow": {
        "slide_type": "-"
       }
      },
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -542,6 +795,8 @@
      "language": "python",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -553,18 +808,20 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 15,
        "text": [
         "'no'"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_type": "subslide"
       },
       "slideshow": {
@@ -584,7 +841,10 @@
      ],
      "language": "python",
      "metadata": {
-      "internals": {},
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1
+      },
       "slideshow": {
        "slide_type": "-"
       }
@@ -593,13 +853,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 16,
        "text": [
         "True"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -612,6 +872,8 @@
      "language": "python",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "subslide_end",
@@ -620,12 +882,14 @@
       }
      },
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
@@ -642,8 +906,12 @@
      "cell_type": "markdown",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_helper": "subslide_end",
        "slide_type": "subslide"
       },
+      "slide_helper": "slide_end",
       "slideshow": {
        "slide_type": "subslide"
       }
@@ -659,6 +927,11 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
+       "slide_type": "subslide"
+      },
       "slideshow": {
        "slide_type": "slide"
       }
@@ -670,6 +943,10 @@
     {
      "cell_type": "markdown",
      "metadata": {
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1
+      },
       "slideshow": {
        "slide_type": "notes"
       }
@@ -688,7 +965,10 @@
      ],
      "language": "python",
      "metadata": {
-      "internals": {},
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1
+      },
       "slideshow": {
        "slide_type": "skip"
       }
@@ -719,7 +999,10 @@
      ],
      "language": "python",
      "metadata": {
-      "internals": {},
+      "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1
+      },
       "slideshow": {
        "slide_type": "skip"
       }
@@ -788,6 +1071,8 @@
      "language": "python",
      "metadata": {
       "internals": {
+       "frag_helper": "fragment_end",
+       "frag_number": 1,
        "slide_helper": "subslide_end"
       },
       "slide_helper": "slide_end",
