software carpentry to get started with python

--- a/lectures/Lecture_1.ipynb
+++ b/lectures/Lecture_1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:99813e0de31eaa6ebc5b254286190bfd825e71f6695ca1c7dc8b6037209c01b5"
+  "signature": "sha256:551530f872e0a18fdcd5934817f04613729080aee30cdd7b223537689e5004a8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -899,7 +899,10 @@
       }
      },
      "source": [
-      "## How much better can you do with a single rule?"
+      "## How much better can you do with a single rule?\n",
+      "\n",
+      "## Alternatively, how can you learn enough Python to do this?\n",
+      "### http://software-carpentry.org/v5/novice/python/index.html"
      ]
     },
     {
